# routes/api.php
@@ -2,6 +2,7 @@
 
 declare(strict_types=1);
 
+use App\Assignment\Infrastructure\Http\GetConsolidatedListingController;
 use App\Assignment\Infrastructure\Http\PostCandidatureAutoAssignController;
 use App\Assignment\Infrastructure\Http\PutCandidatureEvaluatorController;
 use App\Candidature\Infrastructure\Http\GetCandidatureValidationController;
@@ -11,6 +12,7 @@ use Illuminate\Support\Facades\Route;
 
 Route::post('/candidatures', PostCandidatureController::class);
 Route::post('/candidatures/auto-assign', PostCandidatureAutoAssignController::class);
+Route::get('/candidatures/consolidated', GetConsolidatedListingController::class);
 Route::get('/candidatures/{id}/validation', GetCandidatureValidationController::class)->whereUlid('id');
 
 Route::post('/evaluators', PostEvaluatorController::class);
